# artella-dccs-maya

./: .gitattributes  MANIFEST.in  README.md  README.rst  requirements.txt  setup.cfg
.github/workflows/: pythonpackage.yml  pythonrelease.yml
artella/: __init__.py
artella/dccs/: __init__.py
artella/dccs/maya/: __init__.py  __version__.py  _version.py  app.py  callback.py  dcc.py  downloader.py  mayapy_parser.py  menu.py  parser.py  plugin.py  progress.py  ui.py  utils.py  window.py
artella/dccs/maya/scripts/: maya_parser.py
tests/: test_client.py
