[metadata]
name = artella-dccs-maya
description = Artella plugin integration for Autodesk Maya.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Artella, Inc
author_email = support@artella.com
url = https://github.com/artella/artella-dccs-maya

[options]
zip_safe = False
include_package_data = true
packages=find:
install_requires =
    artella-plugins-core

[options.extras_require]
dev =
    wheel

test =
    pytest

[bdist_wheel]
universal=1

[versioneer]
VCS = git
style = pep440
versionfile_source = artella/dccs/maya/_version.py
versionfile_build = artella/dccs/maya/_version.py
tag_prefix = releases/
parentdir_prefix = artella-dccs-maya-releases-